frontend/test/should_fail/delretypesame_003b_e.grg
rule r{	-e:Edge->;	p:P1(e);		modify {		-f:Edge<e>->;		p();	}}pattern P1(-e:Edge->){	p:P2(e);		modify {		p();	}}pattern P2(-e:Edge->){	modify {		delete(e);	}}